--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "currency-converter",
+  "homepage": "./",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "gh-pages": "^6.3.0",
     "normalize.css": "^8.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -11,6 +13,7 @@
     "sass": "^1.83.4"
   },
   "scripts": {
+	"deploy": "react-scripts build && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
